--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.11.3", features = ["dynamic_linking", "wav"] }
+bevy_rapier2d = "0.22.0"
 libc = "0.2.149"
 
 [build-dependencies]
