--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.11.3", features = ["dynamic_linking", "wav"] }
+bevy-inspector-egui = "0.20.0"
 bevy_rapier2d = { version = "0.22.0", features = ["debug-render-2d"] }
 libc = "0.2.149"
 
