--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bevy = { version = "0.11.3", features = ["dynamic_linking", "wav"] }
 bevy-inspector-egui = "0.20.0"
 bevy_rapier2d = { version = "0.22.0", features = ["debug-render-2d"] }
+bevy_xpbd_2d = { version = "0.2.0", features = [] }# "debug-plugin"
 libc = "0.2.149"
 
 [build-dependencies]
