--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bevy-inspector-egui = "0.20.0"
 bevy_rapier2d = { version = "0.22.0", features = ["debug-render-2d"] }
 bevy_xpbd_2d = { version = "0.2.0", features = [] }# "debug-plugin"
 libc = "0.2.149"
+rand = "0.8.5"
 
 [build-dependencies]
 cc = "1.0.83"
